--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  background-color: #000;
+  min-height: 100vh;
+  color: #fff;
+}
+
+.content-section {
+  background-color: #000;
+  min-height: 100vh;
+  padding: 20px;
 }
 
 .App-logo {
